# OZ_Backend_School_miniProject

./: README.md
Admin_Page_Project/: README.md
Admin_Page_Project/html/: Admin.html
Admin_Page_Project/js/: admin.js
Crwaling_book_info/: book_info_crawling.py  crawing_table_create.sql  practice.ipynb
Web_Crawling/: pyproject.toml
psychological_test_completion/: README.md  pyproject.toml
psychological_test_completion/code_analysis/: README.md  db.sqlite
psychological_test_completion/code_analysis/app/: __init__.py  database.py  models.py  routes.py
psychological_test_completion/code_analysis/app/templates/: admin.html  dashboard.html  index.html  manage_questions.html  quiz.html  quiz_list.html
psychological_test_completion/code_analysis/images/: .$flow-chart.drawio.bkp
psychological_test_completion/images/: .$usecase_diagram.drawio.bkp  flow-chart.drawio  usecase_diagram.drawio
